# cc-toolgate

./: CHANGELOG.md  Cargo.toml  README.md  config.default.toml
.config/: nextest.toml
.github/workflows/: build.yml  claude-code-review.yml  claude.yml  release.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion_checklist.md
docs/: path-matching-design.md
src/: config.rs  lib.rs  logging.rs  main.rs
src/commands/: cargo.rs  deny.rs  gh.rs  git.rs  kubectl.rs  mod.rs  simple.rs
src/commands/tools/: cargo.rs  gh.rs  git.rs  knowledge.rs  kubectl.rs  mod.rs
src/eval/: context.rs  decision.rs  matcher.rs  mod.rs  tests.rs
src/parse/: mod.rs  shell.rs  tokenize.rs  types.rs
tests/: disposition_spec.rs  integration.rs
