[package]
name = "cc-toolgate"
version = "0.1.0"
edition = "2024"
description = "PreToolUse hook for Claude Code that gates Bash commands with compound-command-aware validation"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
