[package]
name = "cc-toolgate"
version = "0.6.3"
edition = "2024"
description = "PreToolUse hook for Claude Code that gates Bash commands with compound-command-aware validation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/butterflyskies/cc-toolgate"
readme = "README.md"
keywords = ["claude-code", "hooks", "security", "shell", "toolgate"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.95"

[dependencies]
agent-shell-parser = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
simplelog = "0.12"
toml = "0.8"
shellexpand = "3.1.2"

[profile.release]
strip = true
lto = true
